2005-06-20  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: On 04/25, a change was made
	  to move seteuid/setegid to before checking
	  the existance of the user's $HOME id to fix
	  bug #301821.  That patch added new seteuid/setegid
	  calls before the check, but didn't remove the
	  calls after the check.  Calling these functions
	  twice is needless and was causing problems on
	  NetBSD (refer to bug #301821), so now fixing
	  the logic so it doesn't needlessly call the
	  function twice.  This fixes bug #301821.  Patch
	  provided by Julio M. Merino Vidal.  This fixes
	  bug #301821.

2005-06-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.c:  Fix Delete button sensitivity.
	  Fixes part of bug #302354.  Patch by Andrew Case.

2005-06-17  Julio M. Merino Vidal <jmmv84@gmail.com>

	* docs/C/gdm.xml: Fix duplicate entity ID so that the
	  document validates correctly.  Fixes bug #308048.

2005-06-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmXnestchooser.c, gui/gdmcomm.c, 
	  gui/gdmflexiserver.c, gui/gdmphotosetup.c, 
	  gui/gdmwm.c:  Fix leaks.  Addresses bug 
	  #307482.  Patch provided by Kjartan Maraas.
	* gui/modules/dwellmouselistener.c, 
	  gui/modules/keymouselistener.c:  Remove
	  needless "\n" from syslog calls.

2005-06-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/modules/dwellmouselistener.c, 
	  gui/modules/keymouselistener.c:  Now log messages to 
	  syslog since you can't see messages printed to
	  stdout/stderr when running under gdm2.  Now only 
	  print messages if GDM_DEBUG_GESTURES environment
	  variable is set to TRUE.  Cleaned up the code so it
	  is more readible.  No longer modify PATH since
	  gdm2 now puts full path to executables in the
	  gesture listener config files.  More secure.

2005-06-13  Brian Cameron  <brian.cameron@sun.com>

	* vicious-extensions/ve-gnome.c:  Remove reference
	  to libgnome.  The daemon should not depend on libgnome.