@@ -1,6 +1,8 @@
 #!/bin/sh
 # Run this to generate all the initial makefiles, etc.
 
+REQUIRED_AUTOMAKE_VERSION=1.5
+
 srcdir=`dirname $0`
 test -z "$srcdir" && srcdir=.
 
@@ -24,4 +26,5 @@ which gnome-autogen.sh || {
     echo "You need to install gnome-common from the GNOME CVS"
     exit 1
 }
-USE_GNOME2_MACROS=1 . gnome-autogen.sh
+#USE_GNOME2_MACROS=1 . gnome-autogen.sh
+. gnome-autogen.sh
